# collapse

./: .gitignore  LICENSE  Makefile  README.md  README.md.bak  mathematical_proof_system.py  mathematical_proof_system.py.cslx  setup.cfg
.github/: CODEOWNERS
.github/workflows/: csl-ci.yml
CSL-PyKernel/: README.md  anyfile.cslx  anyfile.js  anyfile.py  collapse  collapse_pack.py  collapse_run.py  collapse_unpack.py  csl_any_collapse.py  csl_native.py  csl_with_cc.py  mathematical_proof_system.py  mathematical_proof_system.py.cslx  mathematical_proof_system.py.cslx.cslx  mathematical_proof_system_pack.cslx  mathematical_proof_system_pack.py  mini.csl  mini_and.csl  mini_cc.py  mini_in_or.csl  mini_neq.csl  mini_or.csl  mymodel.csl  pyproject.toml  setup_all.sh  zip_mathematical_proof_system.py
CSL-PyKernel/csl_kernel/: asc7.py  compiler.py  fardbits.py  parser.py
CSL-PyKernel/csl_kernel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
