[metadata]
name = csl-core
version = 0.1.0
author = Muhammad University of Islam (MUI)
description = Core Collapse System Logic (CSL) kernel and proof system
license = MUI
license_files = LICENSE
url = https://mui.edu
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
